0.4.22
======

- [NEW]: Upgrade to Cython 0.29.24

- [NEW]: Support polars.Series in Function API

- [NEW]: Support polars.Series in Streaming API

- [NEW]: Support polars.DataFrame in Abstract API

0.4.21
======

- [FIX]: Fixed {MIN/MAX/MINMAX}INDEX functions to return correct indices.

0.4.20
======

- [NEW]: Upgrade to Cython 0.29.23

- [FIX]: Fix Homebrew directory on Apple M1 devices

0.4.19
======

- [NEW]: Upgrade to Cython 0.29.20

- [NEW]: from talib import * (imports all func and stream)

- [FIX]: missing method signatures in PyCharm

0.4.18
======

- [NEW]: Upgrade to Cython 0.29.17

- [NEW]: Support TA_SetCompatibility

- [NEW]: Reduce size of generated C file and memory requirements to compile it.

- [FIX]: Fixed caching input price series in Abstract API

- [NEW]: Support pandas.Series in Streaming API

0.4.17
======

- [NEW]: Support pandas.Series in Function API

0.4.16
======

- [FIX]: Fix incorrect C header include on Windows.

0.4.15
======

- [FIX]: Import TA_FUNC_FLAGS, TA_INPUT_FLAGS, TA_OUTPUT_FLAGS into
         talib.abstract to support backwards compatibility for backtrader

0.4.14
======

- [NEW]: Upgrade to Cython 0.27.3

- [NEW]: Add support for set/restore candle settings

- [DOC]: Note Function API only supports numpy.ndarray (not pandas.Series)

- [NEW]: Continuous integration using Travis on Python 2.7, 3.4, 3.5, 3.6

- [NEW]: Merge common, func, abstract, stream as pxi to _ta_lib.pyx

- [DOC]: Update documentation to warn about unstable functions

0.4.10
======

- [NEW]: Upgrade to Cython 0.23.4.

- [NEW]: Adding an experimental Streaming API (talib.stream).

- [NEW]: Support for "sunos"

- [FIX]: Fix issue initializing library for use with candlestick functions.

- [NEW]: Support for TA_SetUnstablePeriod and TA_GetUnstablePeriod

0.4.9
=====

- [NEW]: Support for python 2.6 and earlier for ordereddict.

- [FIX]: Add lib64 paths to setup.py.

- [NEW]: Upgrade to Cython 0.22.

- [FIX]: Allow running setup.py without numpy or cython
