@@ -1,4 +1,4 @@
 -r requirements.txt
 pandas
-nose
+pytest
 polars
